--- a/Keybie/Keybie.csproj
+++ b/Keybie/Keybie.csproj
@@ -105,6 +105,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Bootstrapper.cs" />
+    <Compile Include="Config.cs" />
     <Compile Include="Input.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="MainWindow.xaml.cs">
