start working on view models

--- a/Keybie/Keybie.csproj
+++ b/Keybie/Keybie.csproj
@@ -95,6 +95,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="BaseActionVm.cs" />
+    <Compile Include="RunProcessActionVm.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
